--- a/html/index.html
+++ b/html/index.html
@@ -11,24 +11,24 @@
     <nav>
         <div>
             <img src="src/hamburger-menu.png" alt="Menu">
-            <img src="src/logo2.png" alt="Logo">
+            <img src="/src/logo.png" alt="Logo">
             <p>Bakersa</p>
         </div>
         <div>
             <div>
-                <img src="src/home-icon.png" alt="Home">
+                <img src="/src/home-icon.png" alt="Home">
                 <p>Home</p>
             </div>
             <div>
-                <img src="src/classic-icon.png" alt="Classic">
+                <img src="/src/classic-icon.png" alt="Classic">
                 <p>Classic Bread</p>
             </div>
             <div>
-                <img src="src/custom-icon.png" alt="Custom">
+                <img src="/src/custom-icon.png" alt="Custom">
                 <p>Custom Cake</p>
             </div>
             <div>
-                <img src="src/checkout-icon.png" alt="Checkout">
+                <img src="/src/checkout-icon.png" alt="Checkout">
                 <p>Checkout</p>
             </div>
         </div>
@@ -91,9 +91,9 @@
     <footer>
         <p>&copy; 2021 Bakersa</p>
         <div>
-            <img src="src/instagram.png" alt="Instagram">
-            <img src="src/facebook.png" alt="Facebook">
-            <img src="src/twitter.png" alt="Twitter">
+            <img src="/src/instagram.png" alt="Instagram">
+            <img src="/src/facebook.png" alt="Facebook">
+            <img src="/src/twitter.png" alt="Twitter">
         </div>
     </footer>
 </body>
