--- a/html/index.html
+++ b/html/index.html
@@ -10,31 +10,30 @@
   <body>
     <nav>
       <div class="navbar">
-        <img src="../src/logo2.png" alt="Menu" id="hamburger-menu" />
+        <img src="../src/logo.png" alt="Menu" id="hamburger-menu" />
         <div class="nav-item logo-title">
-          <img src="../src/logo2.png" alt="Logo" />
-          <p>Bakersa</p>
+          <img src="../src/logo-banner.png" alt="Logo" />
         </div>
       </div>
       <div class="navbar-expanded">
         <hr />
         <div class="nav-item">
-          <img src="../src/logo2.png" alt="Home" />
+          <img src="../src/home-icon.png" alt="Home" />
           <p>Home</p>
         </div>
         <hr />
         <div class="nav-item">
-          <img src="../src/logo2.png" alt="Classic" />
+          <img src="../src/classic-icon.png" alt="Classic" />
           <p>Classic Bread</p>
         </div>
         <hr />
         <div class="nav-item">
-          <img src="../src/logo2.png" alt="Custom" />
+          <img src="../src/custom-icon.png" alt="Custom" />
           <p>Custom Cake</p>
         </div>
         <hr />
         <div class="nav-item">
-          <img src="../src/logo2.png" alt="Checkout" />
+          <img src="../src/checkout-icon.png" alt="Checkout" />
           <p>Checkout</p>
         </div>
         <hr />
@@ -45,9 +44,8 @@
       <h2>~ Est. 2001 ~</h2>
       <h3>Your favourite bakery in town</h3>
       <div class="search-stores">
-          
+        <input type="text" placeholder="Search your nearest local stores..." />
       </div>
-      <input type="text" placeholder="Search your nearest local stores..." />
     </header>
     <main>
       <div>
