--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bakersa | Home</title>
-    <link rel="stylesheet" href="../css/navbar.css" />
+    <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/home.css" />
   </head>
   <body>
@@ -62,7 +62,7 @@
             alt="arrow-left"
             class="arrow"
           />
-          <img src="https://picsum.photos/400/200" alt="" class="news-image"/>
+          <img src="https://picsum.photos/400/200" alt="" class="news-image" />
           <img
             src="../src/arrow-right-outline.png"
             alt="arrow-right"
@@ -70,53 +70,57 @@
           />
         </div>
         <div class="dots">
-            <span class="dot dot-active"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
+          <span class="dot dot-active"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
         </div>
       </div>
       <hr />
       <div class="new-breads">
         <h2>Our New Breads</h2>
-        <div>
-          <img src="src/bread-1.png" alt="Bread1" />
-          <div>
+        <div class="bread">
+          <img src="../src/bread/bread1-banana-bread.jpg" alt="Bread 1" />
+          <div class="bread-info">
             <h3>Roti 1</h3>
             <p>Rp 20.000,00</p>
           </div>
-          <div>
-            <p>See more</p>
+          <div class="bread-seemore">
+            <p class="seemore">See more</p>
             <p>>></p>
           </div>
         </div>
 
-        <div>
-          <img src="src/bread-2.png" alt="Bread2" />
-          <div>
+        <div class="bread">
+          <img src="../src/bread/bread2-baguette.jpg" alt="Bread 2" />
+          <div class="bread-info">
             <h3>Roti 2</h3>
             <p>Rp 20.000,00</p>
           </div>
-          <div>
-            <p>See more</p>
+          <div class="bread-seemore">
+            <p class="seemore">See more</p>
             <p>>></p>
           </div>
         </div>
 
-        <div>
-          <img src="src/bread-3.png" alt="Bread3" />
-          <div>
+        <div class="bread">
+          <img src="../src/bread/bread3-challah.jpg" alt="Bread 3" />
+          <div class="bread-info">
             <h3>Roti 3</h3>
             <p>Rp 20.000,00</p>
           </div>
-          <div>
-            <p>See more</p>
+          <div class="bread-seemore">
+            <p class="seemore">See more</p>
             <p>>></p>
           </div>
         </div>
 
-        <div>
-          <img src="src/more.png" alt="More" />
+        <div class="bread bread-more">
+          <div class="dots">
+            <span class="dot dot-active"></span>
+            <span class="dot dot-active"></span>
+            <span class="dot dot-active"></span>
+          </div>
           <h3>More</h3>
         </div>
       </div>
@@ -124,9 +128,15 @@
     <footer>
       <p>&copy; 2021 Bakersa</p>
       <div>
-        <img src="src/instagram.png" alt="Instagram" />
-        <img src="src/facebook.png" alt="Facebook" />
-        <img src="src/twitter.png" alt="Twitter" />
+        <a href="https://www.instagram.com/"
+          ><img src="../src/instagram.png" alt="Instagram"
+        /></a>
+        <a href="https://facebook.com"
+          ><img src="../src/facebook.png" alt="Facebook"
+        /></a>
+        <a href="https://twitter.com">
+          <img src="../src/twitter.png" alt="Twitter"
+        /></a>
       </div>
     </footer>
   </body>
