--- a/html/index.html
+++ b/html/index.html
@@ -103,8 +103,8 @@
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore">See more</p>
-            <p>>></p>
+            <p class="seemore-text">See more</p>
+            <p class="seemore-arrow">>></p>
           </div>
         </div>
 
@@ -115,8 +115,8 @@
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore">See more</p>
-            <p>>></p>
+            <p class="seemore-text">See more</p>
+            <p class="seemore-arrow">>></p>
           </div>
         </div>
 
@@ -127,8 +127,8 @@
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore">See more</p>
-            <p>>></p>
+            <p class="seemore-text">See more</p>
+            <p class="seemore-arrow">>></p>
           </div>
         </div>
 
