--- a/html/index.html
+++ b/html/index.html
@@ -24,22 +24,22 @@
       </div>
       <div id="navbar-expanded">
         <hr />
-        <div class="nav-item hoverable">
+        <div class="nav-item hoverable" id="nav-home">
           <img src="../src/home-icon.png" alt="Home" />
           <p>Home</p>
         </div>
         <hr />
-        <div class="nav-item hoverable">
+        <div class="nav-item hoverable" id="nav-classic">
           <img src="../src/classic-icon.png" alt="Classic" />
           <p>Classic Bread</p>
         </div>
         <hr />
-        <div class="nav-item hoverable">
+        <div class="nav-item hoverable" id="nav-custom">
           <img src="../src/custom-icon.png" alt="Custom" />
           <p>Custom Cake</p>
         </div>
         <hr />
-        <div class="nav-item hoverable">
+        <div class="nav-item hoverable" id="nav-checkout">
           <img src="../src/checkout-icon.png" alt="Checkout" />
           <p>Checkout</p>
         </div>
@@ -50,6 +50,8 @@
 
     <!-- HEADER -->
     <header>
+        <div class="overlay">
+            <img src="../src/logo-light.png" alt="Logo Light" class="logo-light"/>
       <h1>Bakersa</h1>
       <h2>~ Est. 2001 ~</h2>
       <h3>Your favourite bakery in town</h3>
@@ -57,6 +59,8 @@
         <img src="../src/search-icon.png" alt="Search" />
         <input type="text" placeholder="Search your nearest local stores..." />
       </div>
+        </div>
+        
     </header>
 
 
