--- a/html/home.html
+++ b/html/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bakersa | Home</title>
     <link rel="stylesheet" href="../css/base.css" />
+    <link rel="stylesheet" href="../css/breads.css">
     <link rel="stylesheet" href="../css/home.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <body>
@@ -123,57 +124,60 @@
       <div class="new-breads">
         <h2>Our New Breads</h2>
 
-        <div class="bread">
-          <img src="../src/bread/bread1-banana-bread.jpg" alt="Bread 1" />
-          <div class="bread-info">
-            <h3>Roti 1</h3>
-            <p>Rp 20.000,00</p>
+        <div class="breads">
+          <div class="bread">
+            <img src="../src/bread/bread1-banana-bread.jpg" alt="Bread 1" />
+            <div class="bread-info">
+              <h3>Roti 1</h3>
+              <p>Rp 20.000,00</p>
+            </div>
+            <div class="bread-seemore">
+              <p class="seemore-text">See more</p>
+              <p class="seemore-arrow">>></p>
+            </div>
           </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
+  
+          <div class="bread">
+            <img src="../src/bread/bread2-baguette.jpg" alt="Bread 2" />
+            <div class="bread-info">
+              <h3>Roti 2</h3>
+              <p>Rp 20.000,00</p>
+            </div>
+            <div class="bread-seemore">
+              <p class="seemore-text">See more</p>
+              <p class="seemore-arrow">>></p>
+            </div>
+          </div>
+  
+          <div class="bread">
+            <img src="../src/bread/bread3-challah.jpg" alt="Bread 3" />
+            <div class="bread-info">
+              <h3>Roti 3</h3>
+              <p>Rp 20.000,00</p>
+            </div>
+            <div class="bread-seemore">
+              <p class="seemore-text">See more</p>
+              <p class="seemore-arrow">>></p>
+            </div>
+          </div>
+  
+          <div class="bread bread-more">
+            <div class="dots">
+              <span class="dot dot-active"></span>
+              <span class="dot dot-active"></span>
+              <span class="dot dot-active"></span>
+            </div>
+            <h3>More</h3>
           </div>
         </div>
-
-        <div class="bread">
-          <img src="../src/bread/bread2-baguette.jpg" alt="Bread 2" />
-          <div class="bread-info">
-            <h3>Roti 2</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
-          </div>
-        </div>
-
-        <div class="bread">
-          <img src="../src/bread/bread3-challah.jpg" alt="Bread 3" />
-          <div class="bread-info">
-            <h3>Roti 3</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
-          </div>
-        </div>
-
-        <div class="bread bread-more">
-          <div class="dots">
-            <span class="dot dot-active"></span>
-            <span class="dot dot-active"></span>
-            <span class="dot dot-active"></span>
-          </div>
-          <h3>More</h3>
-        </div>
+        
       </div>
     </main>
 
     <!-- FOOTER -->
     <footer>
       <p>&copy; 2021 Bakersa</p>
-      <div>
+      <div class="socmed">
         <a href="https://www.instagram.com/"
           ><img src="../src/instagram.png" alt="Instagram"
         /></a>
