--- a/html/home.html
+++ b/html/home.html
@@ -125,7 +125,7 @@
         <h2>Our New Breads</h2>
 
         <div class="breads">
-          <div class="bread">
+          <a href="bread1.html" class="bread">
             <img src="../src/bread/bread1-banana-bread.jpg" alt="Bread 1" />
             <div class="bread-info">
               <h3>Roti 1</h3>
@@ -135,9 +135,9 @@
               <p class="seemore-text">See more</p>
               <p class="seemore-arrow">>></p>
             </div>
-          </div>
+          </a>
   
-          <div class="bread">
+          <a href="bread2.html" class="bread">
             <img src="../src/bread/bread2-baguette.jpg" alt="Bread 2" />
             <div class="bread-info">
               <h3>Roti 2</h3>
@@ -147,9 +147,9 @@
               <p class="seemore-text">See more</p>
               <p class="seemore-arrow">>></p>
             </div>
-          </div>
+          </a>
   
-          <div class="bread">
+          <a href="bread3.html" class="bread">
             <img src="../src/bread/bread3-challah.jpg" alt="Bread 3" />
             <div class="bread-info">
               <h3>Roti 3</h3>
@@ -159,16 +159,16 @@
               <p class="seemore-text">See more</p>
               <p class="seemore-arrow">>></p>
             </div>
-          </div>
+          </a>
   
-          <div class="bread bread-more">
+          <a href="classic.html" class="bread bread-more">
             <div class="dots">
               <span class="dot dot-active"></span>
               <span class="dot dot-active"></span>
               <span class="dot dot-active"></span>
             </div>
             <h3>More</h3>
-          </div>
+          </a>
         </div>
         
       </div>
@@ -189,6 +189,8 @@
         /></a>
       </div>
     </footer>
+
+    <script src="../js/base.js"></script>
     <script src="../js/home.js"></script>
   </body>
 </html>
