--- a/html/home.html
+++ b/html/home.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/breads.css">
     <link rel="stylesheet" href="../css/home.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@400;700&family=Vollkorn:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <body>
 
@@ -91,7 +93,7 @@
     <!-- MAIN -->
     <main>
         <!-- NEWS -->
-      <div class="news">
+      <section class="news">
         <h2>What's New</h2>
         <div class="image-slider">
           <img
@@ -117,11 +119,11 @@
           <span class="dot" onclick="displayNews(2)"></span>
           <span class="dot" onclick="displayNews(3)"></span>
         </div>
-      </div>
+      </section>
       <hr />
 
       <!-- NEW BREADS -->
-      <div class="new-breads">
+      <section class="new-breads">
         <h2>Our New Breads</h2>
 
         <div class="breads">
@@ -171,7 +173,7 @@
           </a>
         </div>
         
-      </div>
+      </section>
     </main>
 
     <!-- FOOTER -->
