--- a/html/custom.html
+++ b/html/custom.html
@@ -84,21 +84,39 @@
 
     <!-- MAIN -->
     <main>
-        <section id="choose-flavor">
+        <section id="choose-flavor" >
             <h2>Choose the Flavor</h2>
             <div class="image-slider">
                 <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow" id="arrow-left">
                 <div class="cake-image">
                   <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
-                  <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake" id="strawberry-cake">
-                  <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake cake-active" id="vanilla-cake">
-                  <img src="../src/chococake.png" alt="Chocolate Cake" class="cake" id="chocolate-cake">
+                  <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake cake-flavor">
+                  <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake cake-flavor">
+                  <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake cake-flavor">
                 </div>
                 <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow" id="arrow-right">
             </div>
             <h3 id="cake-flavor-title">Vanilla</h3>
             <button id="choose-flavor-next">Next</button>
         </section>
+
+        <section id="add-cream">
+          <h2>Add Cream</h2>
+          <p>+ Rp 10.000,00</p>
+          <div class="image-slider">
+              <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow" id="arrow-left">
+              <div class="cake-image" id="add-cream-image">
+                <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
+                <!-- <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake" id="strawberry-cake">
+                <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake" id="vanilla-cake">
+                <img src="../src/chococake.png" alt="Chocolate Cake" class="cake" id="chocolate-cake"> -->
+                <img src="../src/cream.png" alt="Cream" class="cake-cream">
+              </div>
+              <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow" id="arrow-right">
+          </div>
+          <h3 id="add-cream-title">Yes!</h3>
+          <button id="add-cream-next">Next</button>
+      </section>
     </main>
 
     <!-- FOOTER -->
