--- a/html/custom.html
+++ b/html/custom.html
@@ -84,17 +84,21 @@
 
     <!-- MAIN -->
     <main>
-        <section id="choose-flavor" >
+        <!-- id buat jquery search buat nambah class section-active -->
+        <section id="choose-flavor" > 
             <h2>Choose the Flavor</h2>
+            <!-- class image-slider buat di css -->
             <div class="image-slider">
-                <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow" id="arrow-left">
+                <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow" id="arrow-left-flavor">
+                <!-- class cake-image kurang penting -->
                 <div class="cake-image">
                   <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
+                  <!-- class cake buat ilangin gambar, cake-flavor buat select di js, cake-active buat munculin gambar -->
                   <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake cake-flavor">
                   <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake cake-flavor">
                   <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake cake-flavor">
                 </div>
-                <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow" id="arrow-right">
+                <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow" id="arrow-right-flavor">
             </div>
             <h3 id="cake-flavor-title">Vanilla</h3>
             <button id="choose-flavor-next">Next</button>
@@ -102,20 +106,34 @@
 
         <section id="add-cream">
           <h2>Add Cream</h2>
-          <p>+ Rp 10.000,00</p>
+          <p id="cream-price">+ Rp 10.000,00</p>
           <div class="image-slider">
-              <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow" id="arrow-left">
-              <div class="cake-image" id="add-cream-image">
+              <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow" id="arrow-left-cream">
+              <div class="cake-image" >
                 <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
-                <!-- <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake" id="strawberry-cake">
-                <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake" id="vanilla-cake">
-                <img src="../src/chococake.png" alt="Chocolate Cake" class="cake" id="chocolate-cake"> -->
-                <img src="../src/cream.png" alt="Cream" class="cake-cream">
+                <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake" id="strawberry-cake-cream">
+                <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake" id="vanilla-cake-cream">
+                <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake" id="chocolate-cake-cream">
+                <img src="../src/cream.png" alt="Cream" class="cake-cream" id="cake-cream">
               </div>
-              <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow" id="arrow-right">
+              <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow" id="arrow-right-cream">
           </div>
           <h3 id="add-cream-title">Yes!</h3>
           <button id="add-cream-next">Next</button>
+      </section>
+
+      <section id="add-message">
+        <h2>Add a Message</h2>
+        <div class="image-slider">
+            <div class="cake-image" >
+              <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
+              <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake" id="strawberry-cake-message">
+              <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake" id="vanilla-cake-message">
+              <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake" id="chocolate-cake-message">
+              <img src="../src/cream.png" alt="Cream" class="cake-cream" id="cake-cream">
+            </div>
+        </div>
+        <button id="add-message-finish">Finish</button>
       </section>
     </main>
 
