--- a/html/custom.html
+++ b/html/custom.html
@@ -89,7 +89,7 @@
             <h2>Choose the Flavor</h2>
             <!-- class image-slider buat di css -->
             <div class="image-slider">
-                <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow" id="arrow-left-flavor">
+                <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow arrow-left" id="arrow-left-flavor">
                 <!-- class cake-image kurang penting -->
                 <div class="cake-image">
                   <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
@@ -98,7 +98,7 @@
                   <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake cake-flavor">
                   <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake cake-flavor">
                 </div>
-                <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow" id="arrow-right-flavor">
+                <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow arrow-right" id="arrow-right-flavor">
             </div>
             <h3 id="cake-flavor-title">Vanilla</h3>
             <button id="choose-flavor-next">Next</button>
@@ -108,16 +108,17 @@
           <h2>Add Cream</h2>
           <p id="cream-price">+ Rp 10.000,00</p>
           <div class="image-slider">
-              <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow" id="arrow-left-cream">
+              <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow arrow-left" id="arrow-left-cream">
               <div class="cake-image" >
                 <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
-                <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake" id="strawberry-cake-cream">
-                <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake" id="vanilla-cake-cream">
-                <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake" id="chocolate-cake-cream">
-                <img src="../src/cream.png" alt="Cream" class="cake-cream" id="cake-cream">
+                <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake cake-cream" id="strawberry-cake-cream">
+                <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake cake-cream" id="vanilla-cake-cream">
+                <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake cake-cream" id="chocolate-cake-cream">
+                <img src="../src/cream.png" alt="Cream" class="cream" id="cake-cream">
               </div>
-              <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow" id="arrow-right-cream">
+              <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow arrow-right" id="arrow-right-cream">
           </div>
+          <button id="add-cream-before">Prev</button>
           <h3 id="add-cream-title">Yes!</h3>
           <button id="add-cream-next">Next</button>
       </section>
@@ -127,14 +128,39 @@
         <div class="image-slider">
             <div class="cake-image" >
               <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
-              <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake" id="strawberry-cake-message">
-              <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake" id="vanilla-cake-message">
-              <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake" id="chocolate-cake-message">
-              <img src="../src/cream.png" alt="Cream" class="cake-cream" id="cake-cream">
+              <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake cake-message" id="strawberry-cake-message">
+              <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake cake-message" id="vanilla-cake-message">
+              <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake cake-message" id="chocolate-cake-message">
+              <img src="../src/cream.png" alt="Cream" class="cream" id="cake-cream-message">
             </div>
         </div>
-        <button id="add-message-finish">Finish</button>
+        <div class="input-message">
+          <input type="text" placeholder="Add messages here..." id="cake-input-message">
+          <input type="color" id="cake-input-message-color">
+        </div>
+        <button id="add-message-finish" class="wide-button">Finish</button>
+        <button id="add-message-previous" class="wide-button">Previous</button>
       </section>
+
+
+      <section id="cake-finish">
+        <h2>Your Cake is Beautiful</h2>
+        <div class="image-slider">
+            <div class="cake-image" >
+              <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
+              <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake cake-finish" id="strawberry-cake-finish">
+              <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake cake-finish" id="vanilla-cake-finish">
+              <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake cake-finish" id="chocolate-cake-finish">
+              <img src="../src/cream.png" alt="Cream" class="cream" id="cake-cream-finish">
+              <div class="cake-message-container">
+                <p id="cake-message"></p>
+              </div>
+            </div>
+        </div>
+        <p id="cake-price"></p>
+        <button id="add-message-finish" class="wide-button">Add to Cart</button>
+      </section>
+
     </main>
 
     <!-- FOOTER -->
