--- a/html/custom.html
+++ b/html/custom.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@400;700&family=Vollkorn:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
@@ -158,7 +159,8 @@
             </div>
         </div>
         <p id="cake-price"></p>
-        <button id="add-message-finish" class="wide-button">Add to Cart</button>
+        <button id="cake-finish-cart" class="wide-button">Add to Cart</button>
+        <button id="cake-finish-previous" class="wide-button">Previous</button>
       </section>
 
     </main>
