desktop custom cake yay

--- a/html/custom.html
+++ b/html/custom.html
@@ -90,6 +90,10 @@
             <h2>Choose the Flavor</h2>
             <!-- class image-slider buat di css -->
             <div class="image-slider">
+                <div class="cake-faded">
+                  <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
+                  <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="left-flavor">
+                </div>
                 <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow arrow-left" id="arrow-left-flavor">
                 <!-- class cake-image kurang penting -->
                 <div class="cake-image">
@@ -100,6 +104,10 @@
                   <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake cake-flavor">
                 </div>
                 <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow arrow-right" id="arrow-right-flavor">
+                <div class="cake-faded">
+                  <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
+                  <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="right-flavor">
+                </div>
             </div>
             <h3 id="cake-flavor-title">Vanilla</h3>
             <button id="choose-flavor-next">Next</button>
