custom cake desktop lg

--- a/html/custom.html
+++ b/html/custom.html
@@ -117,6 +117,10 @@
           <h2>Add Cream</h2>
           <p id="cream-price">+ Rp 10.000,00</p>
           <div class="image-slider">
+              <div class="cake-faded" id="cake-faded-left">
+                <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
+                <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="left-cream">
+              </div>
               <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow arrow-left" id="arrow-left-cream">
               <div class="cake-image" >
                 <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
@@ -126,6 +130,11 @@
                 <img src="../src/cream.png" alt="Cream" class="cream" id="cake-cream">
               </div>
               <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow arrow-right" id="arrow-right-cream">
+              <div class="cake-faded" id="cake-faded-right">
+                <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
+                <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="right-cream">
+                <img src="../src/cream.png" alt="Cream" class="cream" id="cake-cream-right">
+              </div>
           </div>
           <button id="add-cream-before">Prev</button>
           <h3 id="add-cream-title">Yes!</h3>
