--- a/html/custom.html
+++ b/html/custom.html
@@ -78,7 +78,7 @@
     <header>
       <div class="overlay">
         <h1>Cakes</h1>
-        <h2>~ Create your own cakes ~</h2>
+        <h2>~ Create your own cake ~</h2>
         <h3>Make it very special to you and your fellows</h3>
       </div>
     </header>
